--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   repo: wwl3leathers/wwl3leathers.github.io
   branch: main
   auth_type: implicit
+  app_id: 0
 
 media_folder: "assets/uploads"
 public_folder: "/assets/uploads"
