--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,59 +1,32 @@
+# Use DecapBridge PKCE auth (required)
 backend:
-  name: github
+  name: git-gateway
   repo: wwl3leathers/wwl3leathers.github.io
   branch: main
-  base_url: "https://verdant-lollipop-83c8c6.netlify.app"
-  auth_endpoint: "/api/auth"
+  auth_type: pkce
+  base_url: https://auth.decapbridge.com
+  auth_endpoint: /sites/5034d694-24bf-47dd-9147-53afd4d322ca/pkce
+  auth_token_endpoint: /sites/5034d694-24bf-47dd-9147-53afd4d322ca/token
+  gateway_url: https://gateway.decapbridge.com
 
-media_folder: "assets/uploads"
-public_folder: "/assets/uploads"
+  # See who did what (optional)
+  commit_messages:
+    create: Create {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
+    update: Update {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
+    delete: Delete {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
+    uploadMedia: Upload “{{path}}” - {{author-name}} <{{author-login}}> via DecapBridge
+    deleteMedia: Delete “{{path}}” - {{author-name}} <{{author-login}}> via DecapBridge
+    openAuthoring: Message {{message}} - {{author-name}} <{{author-login}}> via DecapBridge
 
-site_url: "https://wwl3leathers.github.io"
+# Enable PKCE fields (optional, recommended)
+auth:
+  email_claim: email
+  first_name_claim: first_name
+  last_name_claim: last_name
+  avatar_url_claim: avatar_url
 
-collections:
-  - name: "pages"
-    label: "Pages"
-    files:
-      - file: "index.html"
-        label: "Home"
-        name: "home"
-        fields:
-          - { label: "Page Content", name: "body", widget: "markdown" }
-      - file: "about.html"
-        label: "About"
-        name: "about"
-        fields:
-          - { label: "Body", name: "body", widget: "markdown" }
-      - file: "gallery.html"
-        label: "Gallery"
-        name: "gallery"
-        fields:
-          - { label: "Intro Text", name: "body", widget: "markdown", required: false }
-          - label: "Items"
-            name: "items"
-            widget: "list"
-            fields:
-              - { label: "Title", name: "title", widget: "string" }
-              - { label: "Image", name: "image", widget: "image" }
-              - { label: "Alt Text", name: "alt", widget: "string" }
-              - { label: "Description", name: "desc", widget: "text", required: false }
-      - file: "donations.html"
-        label: "Donations"
-        name: "donations"
-        fields:
-          - { label: "Body", name: "body", widget: "markdown" }
-      - file: "payments.html"
-        label: "Payments"
-        name: "payments"
-        fields:
-          - { label: "Body", name: "body", widget: "markdown" }
+# Better Decap + Bridge logo (optional)
+logo_url: https://decapbridge.com/decapcms-with-bridge.svg
 
-  - name: "updates"
-    label: "Updates"
-    folder: "updates"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Body", name: "body", widget: "markdown" }
+# Add site links in Decap CMS (optional)
+site_url: https://wwl3leathers.github.io
