--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,4 +1,3 @@
-# Use DecapBridge PKCE auth (required)
 backend:
   name: git-gateway
   repo: wwl3leathers/wwl3leathers.github.io
@@ -9,41 +8,24 @@ backend:
   auth_token_endpoint: /sites/5034d694-24bf-47dd-9147-53afd4d322ca/token
   gateway_url: https://gateway.decapbridge.com
 
-  # See who did what (optional)
-  commit_messages:
-    create: Create {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    update: Update {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    delete: Delete {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    uploadMedia: Upload “{{path}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    deleteMedia: Delete “{{path}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    openAuthoring: Message {{message}} - {{author-name}} <{{author-login}}> via DecapBridge
-
-# Enable PKCE fields (optional, recommended)
-auth:
-  email_claim: email
-  first_name_claim: first_name
-  last_name_claim: last_name
-  avatar_url_claim: avatar_url
-
-# Better Decap + Bridge logo (optional)
-logo_url: https://decapbridge.com/decapcms-with-bridge.svg
-
-# Add site links in Decap CMS (optional)
-site_url: https://wwl3leathers.github.io
 media_library:
-  name: uploadcare
+  name: "simple"
 
 media_folder: "assets/uploads"
 public_folder: "/assets/uploads"
 
+site_url: "https://wwl3leathers.github.io"
+
 collections:
   - name: "pages"
     label: "Pages"
-    label_singular: "Page"
     folder: "content/pages"
     create: true
     slug: "{{slug}}"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Body", name: "body", widget: "markdown" }
-
+      - label: "Title"
+        name: "title"
+        widget: "string"
+      - label: "Body"
+        name: "body"
+        widget: "markdown"
